# windows-ai-runtime

./: .gitignore  CMakeLists.txt  README.md  windows-ai-platform.sln
src/AgentOrchestrator/: Orchestrator.cpp  Orchestrator.h
src/ApiGateway/: ApiGateway.http  Program.cs
src/ApiGateway/Controllers/: AgentController.cs  SemanticSearchController.cs
src/InferenceRuntime/: Runtime.cpp  Runtime.h
src/SemanticSearch/: SearchEngine.cpp  SearchEngine.h
src/ServiceHost/: ServiceBootstrap.cpp  ServiceBootstrap.h  main.cpp
src/Telemetry/: Telemetry.cpp  Telemetry.h
